Small changes to isolate from testing