@@ -11,17 +11,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.version>5.10.2</junit.version>
     <lombok.version>1.18.32</lombok.version>
+    <tesfx.version>4.0.18</tesfx.version>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>org.testfx</groupId>
-      <artifactId>testfx-junit5</artifactId>
-      <version>4.0.16-alpha</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -52,32 +46,80 @@
       <artifactId>controlsfx</artifactId>
       <version>11.2.1</version>
     </dependency>
-    <dependency>
-      <groupId>org.testfx</groupId>
-      <artifactId>testfx-core</artifactId>
-      <version>4.0.17</version>
-    </dependency>
-    <dependency>
-      <groupId>org.testfx</groupId>
-      <artifactId>testfx-junit5</artifactId>
-      <version>4.0.17</version>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
+    <!--    <dependency>
+          <groupId>org.testfx</groupId>
+          <artifactId>testfx-core</artifactId>
+          <version>4.0.18</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.testfx</groupId>
+          <artifactId>testfx-junit5</artifactId>
+          <version>4.0.18</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-engine</artifactId>
+          <version>5.11.4</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.11.4</version>
+          <scope>test</scope>
+        </dependency>-->
+    <!--    <dependency>-->
+    <!--      <groupId>org.testfx</groupId>-->
+    <!--      <artifactId>openjfx-monocle</artifactId>-->
+    <!--      <version>21.0.2</version>-->
+    <!--    </dependency>-->
+    <!--    <dependency>-->
+    <!--      <groupId>org.hamcrest</groupId>-->
+    <!--      <artifactId>hamcrest</artifactId>-->
+    <!--      <version>3.0</version>-->
+    <!--      <scope>test</scope>-->
+    <!--    </dependency>-->
   </dependencies>
 
   <build>
+    <testResources>
+      <testResource>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </testResource>
+    </testResources>
     <plugins>
+      <!--      <plugin>-->
+      <!--        <groupId>org.apache.maven.plugins</groupId>-->
+      <!--        <artifactId>maven-surefire-plugin</artifactId>-->
+      <!--        <version>3.2.5</version>-->
+      <!--        <configuration>-->
+      <!--          <argLine>-->
+      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-exports javafx.graphics/com.sun.glass.utils=ALL-UNNAMED-->
+      <!--            &#45;&#45;add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED-->
+      <!--          </argLine>-->
+      <!--        </configuration>-->
+      <!--      </plugin>-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.2</version>
+        <configuration>
+          <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+          <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${project.build.testOutputDirectory}</additionalClasspathElement>
+          </additionalClasspathElements>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
